Contract Configurator 1.11.4
- Clean up some "Input is null" errors/warnings.
- Deprecated VesselParameterDelegator.

Contract Configurator 1.11.3
- Revert additional check added in 1.11.0 that broke PartModuleTypeUnlocked (thanks KnotaiG).
- Work around upgrade issue with ReachSpecificOrbit (thansk Tossy64).

Contract Configurator 1.11.2
- Recompile against KSP 1.1.2.
- Possible fix to PartModuleUnlockedRequirement (thanks AccidentalDisassembly).
- Fixed exception when generating autoAccept contracts.

Contract Configurator 1.11.1
- Update to KSP 1.1.1 (release to make CKAN happy).
- Compile to latest *dev* RemoteTech.

Contract Configurator 1.11.0
- Performance fixes and improved caching of biome data.
- Duration values can now be used in arithmetic and comparisons in expressions.
- Added Duration.ToDouble() and Duration().
- Added Vessel.MET().
- Fixed issue with vessel re-assignment on undock (thanks chrisl).
- Improved contract window text when tracking vessels in a VesselParameterGroup.
- Improved API for requirement saving/loading.
- Add proper error handling to PartModuleTypeUnlocked.
- Added ReachSpecificOrbit.displayNotes back in (thanks severedsolo).
- Fixed orbits for offered contract show up in the tracking station and NOT in flight.
- Minor bug fixes.

Contract Configurator 1.10.4
- Fixed RemoteTech exceptions (thanks HaArLiNsH, Dtgnoome and Sidelia).

Contract Configurator 1.10.3
- Fixed contract "flickering" on RemoteTech contracts (thanks Razorfang).
- Fixed problems with SCANsat contracts (thanks Torih).
- Fixed issues with child requirements not getting properly propagated to offered contracts.
- Fixed disabling of contract requirements in debug menu (the contract would appear then immediately disappear).

Contract Configurator 1.10.2
- Re-enabled RemoteTech support.
- Fixed exception on requirement load of SCANsatLocationCoverage (thanks wizisi2k).
- Properly fixed contract "flickering" in mission control.

Contract Configurator 1.10.1